# tng-demand-hub

./: .env.example  .gitignore  CLAUDE.md  COMPARACAO_PYTHON_VS_TS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml  test.yml
blog-backend/: .env.example  .gitignore  README.md  package.json  tsconfig.json
blog-backend/scripts/: vendor-sharp.ts
blog-backend/src/: env.ts  main.ts  php-modules.d.ts  pipeline.ts  pipelineQueue.ts  prompt.ts  prompt_padrao_default.ts  prompt_padrao_default.txt  scheduler.ts  settings.ts  supabase.ts  wordpress.ts
blog-backend/tests/: README.md  health.test.ts
blog-backend/wp-plugin/: tng-blog-connect.php
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: blog_sidecar.rs  lib.rs  main.rs
src/components/: AiUsageAdmin.test.tsx  AiUsageAdmin.tsx  ClientCommentsThread.tsx  ClientDetailDrawer.tsx  ClientsAdmin.tsx  ClientsPanelView.tsx  CommentsThread.test.tsx  CommentsThread.tsx  DemandDetailDrawer.test.tsx  DemandDetailDrawer.tsx  HotkeySettings.tsx  KanbanBoard.tsx  MembersAdmin.tsx  NotificationSettings.tsx  NotificationsBell.tsx  OnboardingTour.tsx  PerformancePanel.tsx  RichTextEditor.tsx  RulesAdmin.tsx  SearchPalette.test.tsx  SearchPalette.tsx  SettingsPanel.tsx  UpdateBanner.tsx
src/hooks/: useAuth.tsx
src/lib/: ai.ts  aiUsage.test.ts  aiUsage.ts  attachments.test.ts  attachments.ts  blogClient.ts  blogNav.ts  classificationRules.ts  (+28 more)
supabase/: config.toml
(+70 files in other folders)
