[package]
name = "tng-demand-hub"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tng_demand_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` habilita o inspetor (console) também em build de RELEASE — sem
# isso o devtools só existe em dev, e não dá pra depurar bug que só aparece
# no app empacotado (ex.: anexos não abrindo no Windows). 2026-07-10.
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "net"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

[target."cfg(target_os = \"windows\")".dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc = "0.2"

